--- a/hts-cache/winprofile.ini
+++ b/hts-cache/winprofile.ini
@@ -50,7 +50,7 @@ AcceptLanguage=pt_BR, en, *
 OtherHeaders=
 DefaultReferer=
 MaxRate=25000
-WildCardFilters=+*.png +*.gif +*.jpg +*.jpeg +*.css +*.js -ad.doubleclick.net/* -mime:application/foobar%0d%0a%0d%0a+https://www.revendamaisverde.com.br/%0d%0a
+WildCardFilters=+*.png +*.gif +*.jpg +*.jpeg +*.css +*.js -ad.doubleclick.net/* -mime:application/foobar%0d%0a%0d%0a+https://www.sotel.com.br/%0d%0a
 Proxy=
 Port=
 Depth=
@@ -73,6 +73,6 @@ MIMEDefsMime5=
 MIMEDefsMime6=
 MIMEDefsMime7=
 MIMEDefsMime8=
-CurrentUrl=https://www.revendamaisverde.com.br/
+CurrentUrl=https://www.sotel.com.br/
 CurrentAction=6
 CurrentURLList=
